<resources>
    <string name="app_name">HoReCa v3</string>
    <string name="hello">Hello World!</string>
    <string name="direction_roughly">Roughly %s</string>
    <string name="direction_north">North</string>
    <string name="direction_northnortheast">North by Northeast</string>
    <string name="direction_northeast">Northeast</string>
    <string name="direction_eastnortheast">East by Northeast</string>
    <string name="direction_east">East</string>
    <string name="direction_eastsoutheast">East by Southeast</string>
    <string name="direction_southeast">Southeast</string>
    <string name="direction_southsoutheast">South by Southeast</string>
    <string name="direction_south">South</string>
    <string name="direction_southsouthwest">South by Southwest</string>
    <string name="direction_southwest">Southwest</string>
    <string name="direction_westsouthwest">West by Southwest</string>
    <string name="direction_west">West</string>
    <string name="direction_westnorthwest">West by Northwest</string>
    <string name="direction_northwest">Northwest</string>
    <string name="direction_northnorthwest">North by Northwest</string>
    <string name="time_onesecond">1 second</string>
    <string name="time_halfminute">½ minute</string>
    <string name="time_oneminute">1 minute</string>
    <string name="time_onehour">1 hour</string>
    <string name="time_quarterhour">15 minutes</string>
    <string name="time_halfhour">½ hour</string>
    <string name="time_oneandhalfhours">1½ hours</string>
    <string name="time_twoandhalfhours">2½ hours</string>
    <string name="time_hms_format" formatted="false">%sh %sm %ss</string>
    <string name="accuracy_within" formatted="false">within %s %s</string>
    <string name="error_displaying">Error in displaying location info: %s</string>
    <string name="degree_symbol">&#176;</string>
    <string name="button_click_error">Button click error: </string>
    <string name="gpslogger_still_running">GPSLogger is still running.</string>
    <string name="toast_gpslogger_stillrunning">GPSLogger is still running.</string>
    <string name="summary_loggingto">Logging to:</string>
    <string name="summary_loggingto_screen">screen only</string>
    <string name="summary_loggingto_both">Both GPX and KML</string>
    <string name="summary_freq_every">Frequency:</string>
    <string name="summary_freq_max">maximum</string>
    <string name="summary_dist">Distance:</string>
    <string name="summary_dist_regardless">maximum</string>
    <string name="summary_current_filename">File:</string>
    <string name="summary_current_filename_format">%s (in your GPSLogger folder)</string>
    <string name="summary_autoemail">Emails:</string>
    <string name="foot">&#160;foot</string>
    <string name="feet">&#160;feet</string>
    <string name="sent_server">Points sent to server.</string>
    <string name="sent_location">Location sent to server.</string>
    <string name="cleared">Cleared</string>
    <string name="cleared_map">The map has been cleared.</string>
    <string name="providername_using">&#160;&#160;&#160;&#160;(Using %s)</string>
    <string name="providername_gps">GPS satellites</string>
    <string name="providername_celltower">cell towers</string>
    <string name="feet_per_second">&#160;ft/s</string>
    <string name="deleted">Deleted</string>
    <string name="point_deleted">Point deleted</string>
    <string name="sorry">Sorry</string>
    <string name="success">Yay!</string>
    <string name="btn_users">Пользователи</string>
    <string name="btn_synclog">Лог активностей</string>
    <string name="btn_baseclean">Очистка базы</string>
    <string name="btn_basebackup">Резервное копирование базы</string>
    <string name="btn_baserestore">Восстановление резервной копии базы</string>
    <string name="btn_settings">Настройки</string>
    <string name="btn_login">Вход</string>
    <string name="password">Пароль</string>
    <string name="user_name">Имя пользователя</string>
    <string name="app_nameold">Horeca2</string>
    <string name="wrong_pass">Неверный пароль</string>
    <string name="delete">Удалить</string>
    <string name="btn_adduser">Добавить</string>
    <string name="admin">Администратор</string>
    <string name="user">Торговый представитель</string>
    <string name="confirm">Подтверждение</string>
    <string name="quest_delete">Вы действительно хотите удалить запись?</string>
    <string name="title_adduser">Добавление пользователя</string>
    <string name="title_edituser">Редактирование данных</string>
    <string name="bad_input">Введены недопустимые значения</string>
    <string name="code">Код</string>
    <string name="client">Контрагент</string>
    <string name="mo">Пн</string>
    <string name="tu">Вт</string>
    <string name="wd">Ср</string>
    <string name="fr">Пт</string>
    <string name="th">Чт</string>
    <string name="st">Сб</string>
    <string name="date">Дата</string>
    <string name="btn_only_for">Только за</string>
    <string name="visit_begin">Начало визита</string>
    <string name="visit_end">Конец визита</string>
    <string name="gps_upload">Выгрузка GPS</string>
    <string name="info_update">Обновить информацию</string>
    <string name="reports">Отчеты</string>
    <string name="documents">Документы</string>
    <string name="type">Тип</string>
    <string name="state">Статус</string>
    <string name="number">Номер</string>
    <string name="payment_type">Тип оплаты</string>
    <string name="shipping_date">Дата отгрузки</string>
    <string name="amount">Сумма</string>
    <string name="store">Склад</string>
    <string name="senior">Ответственный</string>
    <string name="add">Добавить</string>
    <string name="app_namefull">Приложение торгового представителя</string>
    <string name="database_indexing">Переиндексация базы</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отмена</string>
    <string name="department">Подразделение</string>
    <string name="comment">Комментарий</string>
    <string name="count">Количество</string>
    <string name="count_short">Кол-во</string>
    <string name="quest_delete_order">Вы действительно хотите удалить заказ?</string>
    <string name="cash">Наличная</string>
    <string name="noncash">Безналичная</string>
    <string name="cash_memo">Товарный чек</string>
    <string name="msg_reserve_db">Создание резервной копии базы данных</string>
    <string name="msg_check_update">Проверка обновлений…</string>
    <string name="msg_download_update">Загрузка данных…</string>
    <string name="msg_unzip_update">Распаковка данных…</string>
    <string name="msg_install_update">Установка обновлений…</string>
    <string name="msg_error_apk_file_not_found">Ошибка! APK файл не найден!</string>
    <string name="msg_error_ftp_download_apk">Ошибка загрузки APK файла с FTP!</string>
    <string name="msg_error_ftp_download_update_xml">Ошибка загрузки файла обновлений с FTP!</string>
    <string name="msg_error_parse_update_xml">Ошибка! Неверный формат файла обновлений!</string>
    <string name="msg_error_nomenclature_id">Не выбрана запись</string>
    <string name="msg_error_count">Неверное значение количества</string>
    <string name="empty"></string>
    <string name="new_order">Новый заказ</string>
    <string name="title_change_state">Изменить статус заказа</string>
    <string name="quest_change_state">После изменения статуса на Проведен, заказ будет готов к выгрузке. Провести заказ?</string>
    <string name="msg_connected">Проверка сети…</string>
    <string name="msg_download_delta">Загрузка обновлений базы данных…</string>
    <string name="msg_parse_delta">Обновление базы данных…</string>
    <string name="msg_backup_db">Резервное копирование базы данных…</string>
    <string name="msg_backup_update">Резервное копирование файла обновлений…</string>
    <string name="msg_backup_app">Резервное копирование приложения…</string>
    <string name="msg_backup_delta">Резервное копирование обновлений…</string>
    <string name="msg_backup_complete">Резервное копирование успешно завершено!</string>
    <string name="msg_restore_db">Восстановление базы данных…</string>
    <string name="msg_restore_update">Восстановление файла обновлений…</string>
    <string name="msg_restore_delta">Восстановление обновлений…</string>
    <string name="msg_restore_app">Восстановление приложения…</string>
    <string name="msg_restore_complete">Восстановление успешно завершено!</string>
    <string name="msg_dlg_reserve_copy">Резервное копирование может занять несколько минут. Продолжить?</string>
    <string name="msg_dlg_title_reserve_copy">Резервное копирование</string>
    <string name="msg_dlg_restore">Восстановление резервной копии может занять несколько минут. Продолжить?</string>
    <string name="msg_dlg_title_restore">Восстановление резервной копии</string>
    <string name="btn_visit_ok">ОК</string>
    <string name="btn_visit_cancel">Отмена</string>
    <string name="log_date">Дата</string>
    <string name="log_type">Тип</string>
    <string name="log_owner">Источник</string>
    <string name="log_message">Текст сообщения</string>
    <string name="bad_price">Введена неверная цена</string>
    <string name="head_btn_date_doc">Дата документа</string>
    <string name="head_btn_doc_number">Номер документа</string>
    <string name="head_btn_constractor">Контрагент</string>
    <string name="head_btn_date_shipment">Дата отгрузки</string>
    <string name="head_btn_request">Отпр.</string>
    <string name="head_order_btn_date">Дата</string>
    <string name="head_order_btn_number">Номер</string>
    <string name="head_order_btn_kontragent">Контрагент</string>
    <string name="head_order_btn_type_payment">Тип оплаты</string>
    <string name="head_order_btn_document_summ">Сумма</string>
    <string name="head_order_btn_date_shipment">Дата отгрузки</string>
    <string name="head_order_btn_comments">Комметарии</string>
    <string name="head_bids_btn_date">Дата</string>
    <string name="head_bids_btn_number">Номер</string>
    <string name="head_bids_btn_document_summ">Сумма</string>
    <string name="head_bids_btn_kontragent">Контрагент</string>
    <string name="head_bids_btn_date_shipment">Дата отгрузки</string>
    <string name="head_bids_btn_comments">Комментарий</string>
    <string name="article">Артикул</string>
    <string name="nomenclature">Номенклатура</string>
    <string name="vendor">Производитель</string>
    <string name="min_count">Мин кол</string>
    <string name="k_mest">К мест</string>
    <string name="ed">Ед</string>
    <string name="min_price">Min цена</string>
    <string name="max_price">Max цена</string>
    <string name="price">Цена</string>
    <string name="bids">Заявки</string>
    <string name="fixed_prices">Фиксированные цены</string>
    <string name="returns_for_clients">Возвраты от покупателей</string>
    <string name="gps_data">GPS данные</string>
    <string name="uploaded">Выгружено</string>
    <string name="contract_groups">Группа договоров</string>
    <string name="naimenovanie">Наименование</string>
    <string name="closed">Закрыт</string>
    <string name="number_symbol">№</string>
    <string name="bill">Накладная</string>
    <string name="bill_date">Дата накладной</string>
    <string name="reason">Причина</string>
    <string name="tovarooborot">Товарооборот, тыс. руб.</string>
    <string name="contract">Договор</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="slash">/</string>
    <string name="point">.</string>
    <string name="del">Del</string>
    <string name="clear">Clear</string>
    <string name="enter">Enter</string>
</resources>