<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:weightSum="1">

	<Button
		android:id="@+id/head_btn_article"
		android:layout_height="40dip"
		android:layout_width="0dip"
		android:layout_weight="0.07"
		android:text="@string/article" />

	<Button
		android:id="@+id/head_btn_nomenclature"
		android:layout_height="40dip"
		android:layout_width="0dip"
		android:layout_weight="0.28"
		android:text="@string/nomenclature" />

	<Button
		android:id="@+id/head_btn_vendor"
		android:layout_height="40dip"
		android:layout_width="0dip"
		android:layout_weight="0.2"
		android:text="@string/vendor" />

	<Button
		android:id="@+id/head_btn_min_count"
		android:layout_height="40dip"
		android:layout_width="0dip"
		android:layout_weight="0.07"
		android:text="@string/min_count" />

	<Button
		android:id="@+id/head_btn_place_count"
		android:layout_height="40dip"
		android:layout_width="0dip"
		android:layout_weight="0.06"
		android:text="@string/k_mest" />

	<Button
		android:id="@+id/head_btn_unit"
		android:layout_height="40dip"
		android:layout_width="0dip"
		android:layout_weight="0.05"
		android:text="@string/ed" />

	<Button
		android:id="@+id/head_btn_price"
		android:layout_height="40dip"
		android:layout_width="0dip"
		android:layout_weight="0.09"
		android:text="@string/price" />

	<Button
		android:id="@+id/head_btn_minprice"
		android:layout_height="40dip"
		android:layout_width="0dip"
		android:layout_weight="0.09"
		android:text="@string/min_price" />

	<Button
		android:id="@+id/head_btn_maxprice"
		android:layout_height="40dip"
		android:layout_width="0dip"
		android:layout_weight="0.09"
		android:text="@string/max_price" />

</LinearLayout>