<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/head_route"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="wrap_content"
	android:weightSum="1">

	<Button android:id="@+id/head_btn_code" android:layout_weight="0.1"
		android:text="@string/code" android:layout_height="40dip" android:layout_width="0dip" />

	<Button android:id="@+id/head_btn_constractor" android:layout_height="40dip" android:layout_width="0dip"
		android:layout_weight="0.6" android:text="@string/client" />

	<Button android:id="@+id/head_btn_monday" android:layout_height="40dip" android:layout_width="0dip"
		android:text="@string/mo" android:layout_weight="0.05" />

	<Button android:id="@+id/head_btn_tuesday" android:layout_height="40dip" android:layout_width="0dip"
		android:text="@string/tu" android:layout_weight="0.05" />

	<Button android:id="@+id/head_btn_wednesday" android:layout_height="40dip" android:layout_width="0dip"
		android:text="@string/wd" android:layout_weight="0.05" />

	<Button android:id="@+id/head_btn_thursday" android:layout_height="40dip" android:layout_width="0dip"
		android:text="@string/th" android:layout_weight="0.05" />

	<Button android:id="@+id/head_btn_friday" android:layout_height="40dip" android:layout_width="0dip"
		android:text="@string/fr" android:layout_weight="0.05" />

	<Button android:id="@+id/head_btn_saturday" android:layout_height="40dip" android:layout_width="0dip"
		android:text="@string/st" android:layout_weight="0.05" />

</LinearLayout>
