<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:weightSum="1" >

    <Button
        android:id="@+id/head_btn"
        android:layout_height="40dip" android:layout_width="0dip"
        android:layout_weight="0.03" />

    <Button
        android:id="@+id/head_btn_n"
        android:layout_height="40dip" android:layout_width="0dip"
        android:layout_weight="0.03"
        android:text="@string/number_symbol" />

    <Button
        android:id="@+id/head_btn_article"
        android:layout_height="40dip" android:layout_width="0dip"
        android:layout_weight="0.08"
        android:text="@string/article" />

    <Button
        android:id="@+id/head_btn_nomenclature"
        android:layout_height="40dip" android:layout_width="0dip"
        android:layout_weight="0.37"
        android:text="@string/nomenclature" />

    <Button
        android:id="@+id/head_btn_count"
        android:layout_height="40dip" android:layout_width="0dip"
        android:layout_weight="0.09"
        android:text="@string/count" />

    <Button
        android:id="@+id/head_btn_bill"
        android:layout_height="40dip" android:layout_width="0dip"
        android:layout_weight="0.1"
        android:text="@string/bill" />

    <Button
        android:id="@+id/head_btn_bill_date"
        android:layout_height="40dip" android:layout_width="0dip"
        android:layout_weight="0.12"
        android:text="@string/bill_date" />

    <Button
        android:id="@+id/head_btn_reason"
        android:layout_height="40dip" android:layout_width="0dip"
        android:layout_weight="0.18"
        android:text="@string/reason" />

</LinearLayout>