<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:weightSum="1" >

    <Button
        android:id="@+id/head_btn_uploaded"
		android:layout_height="40dip" android:layout_width="0dip"
        android:layout_weight="0.09"
        android:text="@string/uploaded" />

    <Button
        android:id="@+id/head_btn_number"
		android:layout_height="40dip" android:layout_width="0dip"
        android:layout_weight="0.1"
        android:text="@string/number" />

    <Button
        android:id="@+id/head_btn_date"
		android:layout_height="40dip" android:layout_width="0dip"
        android:layout_weight="0.12"
        android:text="@string/date" />

    <Button
        android:id="@+id/head_btn_kontragent"
		android:layout_height="40dip" android:layout_width="0dip"
        android:layout_weight="0.35"
        android:text="@string/client" />

    <Button
        android:id="@+id/head_btn_amount"
		android:layout_height="40dip" android:layout_width="0dip"
        android:layout_weight="0.11"
        android:text="@string/amount" />

    <Button
        android:id="@+id/head_btn_comment"
		android:layout_height="40dip" android:layout_width="0dip"
        android:layout_weight="0.23"
        android:text="@string/comment" />

</LinearLayout>