<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:weightSum="1">

	<Button
		android:id="@+id/head_btn_n"
		android:layout_height="40dip"
		android:layout_width="0dip"
		android:layout_weight="0.05"
		android:text="@string/number_symbol" />

	<Button
		android:id="@+id/head_btn_article"
		android:layout_height="40dip"
		android:layout_width="0dip"
		android:layout_weight="0.1"
		android:text="@string/article" />

	<Button
		android:id="@+id/head_btn_nomenclature"
		android:layout_height="40dip"
		android:layout_width="0dip"
		android:layout_weight="0.4"
		android:text="@string/nomenclature" />

	<Button
		android:id="@+id/head_btn_price"
		android:layout_height="40dip"
		android:layout_width="0dip"
		android:layout_weight="0.1"
		android:text="@string/price" />

	<Button
		android:id="@+id/head_btn_tovarooborot"
		android:layout_height="40dip"
		android:layout_width="0dip"
		android:layout_weight="0.35"
		android:text="@string/tovarooborot" />

</LinearLayout>