<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:weightSum="1">

	<Button
		android:id="@+id/head_btn_number"
		android:layout_height="40dip"
		android:layout_width="0dip"
		android:layout_weight="0.1"
		android:text="@string/number" />

	<Button
		android:id="@+id/head_btn_contract"
		android:layout_height="40dip"
		android:layout_width="0dip"
		android:layout_weight="0.55"
		android:text="@string/contract" />

	<Button
		android:id="@+id/head_btn_paymenttype"
		android:layout_height="40dip"
		android:layout_width="0dip"
		android:layout_weight="0.15"
		android:text="@string/payment_type" />

	<Button
		android:id="@+id/head_btn_shippingdate"
		android:layout_height="40dip"
		android:layout_width="0dip"
		android:layout_weight="0.1"
		android:text="@string/shipping_date" />

	<Button
		android:id="@+id/head_btn_amount"
		android:layout_height="40dip"
		android:layout_width="0dip"
		android:layout_weight="0.1"
		android:text="@string/amount" />

</LinearLayout>