<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:weightSum="1">

	<Button
		android:id="@+id/head_btn_doc_number"
		android:layout_height="40dip"
		android:layout_width="0dip"
		android:layout_weight="0.12"
		android:text="@string/head_btn_doc_number" />

	<Button
		android:id="@+id/head_btn_date_doc"
		android:layout_height="40dip"
		android:layout_width="0dip"
		android:layout_weight="0.12"
		android:text="@string/head_btn_date_doc" />

	<Button
		android:id="@+id/head_btn_constractor"
		android:layout_height="40dip"
		android:layout_width="0dip"
		android:layout_weight="0.57"
		android:text="@string/head_btn_constractor" />

	<Button
		android:id="@+id/head_btn_date_shipment"
		android:layout_height="40dip"
		android:layout_width="0dip"
		android:layout_weight=".1"
		android:text="@string/head_btn_date_shipment" />

	<Button
		android:id="@+id/head_btn_request"
		android:layout_height="40dip"
		android:layout_width="0dip"
		android:layout_weight="0.09"
		android:text="@string/head_btn_request" />

</LinearLayout>