<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:weightSum="1" >

    <Button
        android:id="@+id/head_btn_kod"
		android:layout_height="40dip" android:layout_width="0dip"
        android:layout_weight="0.25"
        android:text="@string/code" />

    <Button
        android:id="@+id/head_btn_name"
		android:layout_height="40dip" android:layout_width="0dip"
        android:layout_weight="0.25"
        android:text="@string/naimenovanie" />

    <Button
        android:id="@+id/head_btn_closed"
		android:layout_height="40dip" android:layout_width="0dip"
        android:layout_weight="0.25"
        android:text="@string/closed" />
    
    <Button
        android:id="@+id/head_btn_contract_groups"
		android:layout_height="40dip" android:layout_width="0dip"
        android:layout_weight="0.25"
        android:text="@string/contract_groups" />

</LinearLayout>